<resources>
    <string name="app_name">Lunar Launcher</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_colors">Colors</string>
    <string name="pref_header_about">About</string>

    <string name="colorPickerDialog_title">Select a color</string>
    <string name="hideAppsDialog_title">Select apps to hide</string>

    <string name="iconOptionsTitle">Icon visibility</string>
    <string name="hideAppsPreferenceTitle">Hide certain apps</string>
    <string name="hideAppsPreferenceSummary">Favorited apps won\'t be hidden</string>

    <string name="backgroundColorPreferenceTitle">Background color</string>
    <string name="backgroundColorPreferenceSummary">Change the color of the overlay</string>
    <string name="textColorPreferenceTitle">Text color</string>
    <string name="textColorPreferenceSummary">Change the text color</string>

    <string name="fastScrollingPreferenceTitle">Enable fast scrolling in apps screen</string>

    <string name="contactDeveloperTitle">Contact developer</string>
    <string name="contactDeveloperSummary">Send me an email if you have questions or suggestions</string>

    <string name="noFavoriteAppsText">Add some favorites :)</string>
    <string name="loadingText">Loading...</string>

    <string name="menuAddFavorites">Add to favorites</string>
    <string name="menuRemoveFavorites">Remove from favorites</string>
    <string name="menuAppInfo">App info</string>
    <string name="menuDeleteApp">Delete app</string>
    <string name="menuHideApp">Hide from launcher</string>


    <string-array name="iconOptions">
        <item>Show no icons</item>
        <item>Show all icons</item>
        <item>Show just app drawer icons</item>
        <item>Show just favorites icons</item>
    </string-array>
    <string-array name="iconOptionsValues">
        <item>hideIcons</item>
        <item>showIcons</item>
        <item>drawerIcons</item>
        <item>favoriteIcons</item>
    </string-array>

    <string name="favoritesOrderTitle">Change order of favorites</string>
    <string-array name="favoritesOrder">
        <item>Default</item>
        <item>Default, reversed</item>
        <item>Alphabetical</item>
        <item>Alphabetical, reversed</item>
    </string-array>
    <string-array name="favoritesOrderValues">
        <item>default</item>
        <item>defaultReversed</item>
        <item>alphabetical</item>
        <item>alphabeticalReversed</item>
    </string-array>
</resources>
